--- a/botsing-preprocessing/pom.xml
+++ b/botsing-preprocessing/pom.xml
@@ -31,19 +31,9 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
 		<dependency>
-			<groupId>org.ow2.asm</groupId>
-			<artifactId>asm</artifactId>
-			<version>${asm.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.ow2.asm</groupId>
-			<artifactId>asm-util</artifactId>
-			<version>${asm.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.ow2.asm</groupId>
-			<artifactId>asm-commons</artifactId>
-			<version>${asm.version}</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.20</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -56,7 +46,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>eu.stamp_project.botsing.Main</mainClass>
+							<mainClass>eu.stamp.botsing.Main</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
