--- a/pom.xml
+++ b/pom.xml
@@ -90,8 +90,9 @@
         <maven-plugin-annotations.version>3.5.2</maven-plugin-annotations.version>
         <maven-plugin-api.version>3.5.4</maven-plugin-api.version>
         <maven-plugin-testing-harness.version>3.3.0</maven-plugin-testing-harness.version>
-        
-        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <maven-verifier.version>1.6</maven-verifier.version>
+	
+	<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-source-plugin.version>2.4</maven-source-plugin.version>
         <mockito.version>2.23.0</mockito.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
