--- a/botsing-commons/pom.xml
+++ b/botsing-commons/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>botsing</artifactId>
         <groupId>eu.stamp-project</groupId>
-        <version>1.0.5-SNAPSHOT</version>
+        <version>1.0.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
