--- a/botsing-reproduction/src/main/resources/config.properties
+++ b/botsing-reproduction/src/main/resources/config.properties
@@ -6,3 +6,4 @@ no_runtime_dependency = false
 global_timeout = 1800
 catch_undeclared_exceptions = false
 instrument_libraries = true
+test_archive = false
