--- a/botsing-integration/src/main/resources/config.properties
+++ b/botsing-integration/src/main/resources/config.properties
@@ -1,9 +1,8 @@
-population = 100
-search_budget = 1800
+search_budget = 180
 max_recursion = 30
 test_dir = integration_level_tests
 no_runtime_dependency = false
-global_timeout = 18000
-catch_undeclared_exceptions = false
+global_timeout = 300
+catch_undeclared_exceptions = true
 instrument_libraries = true
 test_archive = false
