--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -52,7 +52,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${surefire-plugin.version}</version>
+                <!--<version>${surefire-plugin.version}</version>-->
                 <configuration>
                     <runOrder>alphabetical</runOrder>
                 </configuration>
@@ -60,7 +60,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>${maven-jar-plugin.version}</version>
+                <!--<version>${maven-jar-plugin.version}</version>-->
                 <executions>
                     <execution>
                         <goals>
