--- a/class-coupling-analyzer/pom.xml
+++ b/class-coupling-analyzer/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>botsing-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>java-hamcrest</artifactId>
+            <version>2.0.0.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
